# openai-http-proxy

./: .env  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  Rocket.toml  config.dev.yaml  config.yaml  migrate_script.sh  s.prod.yaml  s.test.yaml  s.yaml
.github/workflow/: build.yaml
.github/workflows/: build.yaml
abi/: Cargo.toml  build.rs  openapi.json
abi/protos/: content_service.proto
abi/readbot_proto/: README.md  request.proto  response.proto
abi/src/: lib.rs
abi/src/error/: mod.rs
abi/src/models/: content.rs  feed.rs  feed_content.rs  mod.rs
abi/src/models/database/: content.rs  feed.rs  mod.rs  user.rs
abi/src/models/request/: feed.rs  mod.rs  user.rs
abi/src/models/response/: feed.rs  mod.rs  user.rs
abi/src/pb/: content_service.rs  mod.rs  model.rs  request.rs  response.rs
abi/src/request/: feed.rs  mod.rs
abi/src/types/: config.rs  content.rs  mod.rs  model.rs  request.rs  response.rs  user.rs  user_content.rs
abi/src/utils/: crypto.rs  http.rs  jwt.rs  mod.rs  postgres.rs
codegen/: Cargo.toml  build.rs
codegen/dart/: model.mustache
codegen/dart/serialization/native/: native_class.mustache
codegen/dart2/: import.mustache  pubspec.mustache
content/: Cargo.toml
content/src/: content_manager.rs  lib.rs
content_service/: Cargo.toml
content_service/src/: content_manager.rs  content_service.rs  feed_manager.rs  feed_parser.rs  lib.rs
content_sync/: Cargo.toml
content_sync/src/: feed_group_manager.rs  feed_item_manager.rs  feed_manager.rs  feed_update_record_manager.rs  lib.rs  service.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_user_profile.rs  m20230114_000001_alter_user_profile.rs  m20230122_000001_create_subscribe_source.rs  m20230122_000002_create_user_subscribe_source.rs
migrations/: 20230306120925_create_user_profile.sql  20230306140024_create_user_feed.sql  20230307034105_alter_user_profile.sql  20230307034436_alter_table.sql  20230309032341_feed_profile.sql  20230310140024_create_user_feed.sql  20230311022225_create_feed_post.sql  20230311024001_create_user_post.sql  20230313033713_alter_feed_post.sql  20230314032715_alter_feed_post.sql  20230314080543_alter_user_custom_post.sql  20230316090825_alter_feed_profile.sql  20230320065116_alter_feed_post.sql  20230321130834_create_feed_table.down.sql  20230321130834_create_feed_table.up.sql  20230321130834_feed_table.down.sql  20230321130834_feed_table.up.sql  20230321131208_content_table.down.sql  20230321131208_content_table.up.sql  20230321132103_create_user_information_table.down.sql  20230321132103_create_user_information_table.up.sql  20230321132103_table_user_information.down.sql  20230321132103_table_user_information.up.sql  20230321132750_user_feed_table.down.sql  20230321132750_user_feed_table.up.sql  20230321133255_create_feed_item_table.down.sql  20230321133255_create_feed_item_table.up.sql  20230321133255_user_content_table.down.sql  20230321133255_user_content_table.up.sql  20230322121743_content_trigger.down.sql  20230322121743_content_trigger.up.sql  20230322134321_create_feed_group_table.down.sql  20230322134321_create_feed_group_table.up.sql  20230322134321_recent_insert_content.down.sql  20230322134321_recent_insert_content.up.sql  20230412095123_create_feed_update_record_table.down.sql  20230412095123_create_feed_update_record_table.up.sql  20230417105713_create_user_device.down.sql  20230417105713_create_user_device.up.sql  20230527062727_add_last_sync_device_field.down.sql  (+43 more)
rfcs/: 001.md  001_架构设计.md  002_数据库设计.md
service/: Cargo.toml  build.rs
service/src/: main.rs
service/src/auth_service/: authorization.rs  mod.rs  user_manager.rs
service/src/common/: app_config.rs  auth.rs  mod.rs  responder.rs
service/src/common/service/: feed_service.rs  http_service.rs  jwt_service.rs  mod.rs  mysql_service.rs
service/src/common/utils/: crypto.rs
service/src/database/: feed_post.rs  feed_profile.rs  mod.rs  user_feed.rs  user_post.rs  user_profile.rs
service/src/models/request/: feed_req.rs  login_req.rs  mod.rs  register_req.rs
service/src/models/response/: user_info.rs
service/src/routes/: catcher.rs  content.rs  feed.rs  mod.rs  post.rs  user.rs  vip.rs
service/src/routes/auth_service/: authorization.rs  mod.rs
service/src/routes/authorization/: authorize_user.rs
src/: main.rs
src/base/: base_struct.rs
src/common/: catcher.rs  errors.rs  mod.rs  responder.rs
src/common/config/: common.rs  database.rs  mod.rs
src/common/service/: feed_parser.rs  feed_service.rs  http_service.rs  jwt_service.rs  mod.rs  mysql_service.rs
src/common/utils/: crypto.rs
src/config/: db_config.rs  mod.rs
src/database/: error_hannler.rs  feed_post.rs  feed_profile.rs  mod.rs  setup_database.rs  user.rs  user_custom_feed.rs  user_custom_post.rs  user_feed.rs  user_post.rs  user_profile.rs
src/entities/: database_op.rs  mod.rs  prelude.rs  subscribe_source.rs  user_profile.rs  user_subscribe_source.rs
src/models/request/: feed_info.rs  feed_req.rs  login_req.rs  mod.rs  post_req.rs  register_req.rs
src/models/response/: user_info.rs
src/routes/: content.rs  feed.rs  mod.rs  post.rs  source.rs  user.rs
src/routes/authorization/: authorize_user.rs  jwt.rs  mod.rs
src/routes/fetcher/: fether.rs  mod.rs
src/test/: user_test.rs
src/utils/: crypto.rs  error.rs  errors.rs  mod.rs  prelude.rs  responder.rs  structs.rs
src/utils/jwt/: jwt.rs  mod.rs  structs.rs  traits.rs
user_service/: Cargo.toml
user_service/src/: config.rs  lib.rs  service.rs  user_content_manager.rs  user_feed_manager.rs  user_manager.rs  user_service.rs
