[package]
name = "feed_inbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
rand = "0.8"
sea-orm = {version = "0.10.6", features = ["sqlx-mysql", "runtime-async-std-native-tls", "macros"]}
futures = "0.3.21"
chrono = "0.4.23"
jsonwebtoken = "8.2.0"
bcrypt = "0.13"
anyhow = "1.0.68"
thiserror = "1.0.38"
