[package]
name = "feed_inbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
rand = "0.8"
futures = "0.3.21"
chrono = "0.4.23"
jsonwebtoken = "8.2.0"
bcrypt = "0.13"
thiserror = "1.0.38"
reqwest = "0.11.14"
log = "0.4.17"
env_logger = "0.10.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql", "macros", "migrate", "chrono", "tls", "offline"]}
tokio = "1.26.0"
