[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.14.0"
chrono = "0.4.24"
feed-rs = "1.3.0"
reqwest = "0.11.14"
serde = "1.0.157"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql", "macros", "migrate", "chrono", "tls", "offline"]}
thiserror = "1.0.40"
