[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.14.0"
chrono = {version = "0.4.23", features = ["serde"]}
feed-rs = "1.3.0"
hex = "0.4.3"
jsonwebtoken = "8.3.0"
md-5 = "0.10.5"
prost = "0.11.8"
prost-types = "0.11.8"
serde = "1.0.157"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "tls", "offline"]}
thiserror = "1.0.40"

[build-dependencies]
tonic-build = "0.8.4"
proto-builder-trait = "0.5.1"
