[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.14.0"
chrono = { version = "0.4.23", features = ["serde"] }
jsonwebtoken = "8.3.0"
serde = { version = "1.0.157", features = ["derive"] }
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate",
    "chrono",
    "tls",
    "offline",
] }
thiserror = "1.0.40"
utoipa = "3.3.0"
axum = { version = "0.6.16", features = ['headers'] }
tracing = "0.1.37"
serde_json = "1.0.96"
