[package]
name = "content_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
async-trait = "0.1.67"
feed-rs = "1.3.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql", "macros", "migrate", "chrono", "tls", "offline"]}
tokio = "1.26.0"
