[package]
name = "content_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
async-trait = "0.1.67"
sqlx = { version = "0.6", features = ["postgres", "macros", "chrono"] }
# log = "0.4.17"
tokio = { version = "1.27.0", features = ["full"] }

[build-dependencies]
mockall = "0.11.4"
