[package]
name = "feedbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
rand = "0.8"
futures = "0.3.21"
chrono = {version = "0.4.23", features = ["serde"]}
jsonwebtoken = "8.2.0"
bcrypt = "0.14.0"
thiserror = "1.0.38"
log = "0.4.17"
env_logger = "0.10.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "tls", "offline"]}
feed-rs = "1.3.0"
serde_repr = "0.1.11"
serde = "1.0.154"
abi = { version = "0.1.0", path = "../abi" }
async-trait = "0.1.67"
content_sync = { version = "0.1.0", path = "../content_sync" }
