[package]
name = "feedbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rocket = {version = "0.5.0-rc.2", features = ["json"]}
log = "0.4.17"
env_logger = "0.10.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "tls", "offline"]}
serde = "1.0.154"
abi = { version = "0.1.0", path = "../abi" }
async-trait = "0.1.67"
content_sync = { version = "0.1.0", path = "../content_sync" }
axum = {version = "0.6.16", features = ['headers', 'tracing']}
tokio = {version = "1.27.0", features = ["full"]}
config = "0.13.3"
tower = "0.4.13"
tower-http = {version = "0.4.0", features = ["trace"]}

[build-dependencies]
utoipa = {version= "3", features = ["rocket_extras", "chrono", ]}
abi = { version = "0.1.0", path = "../abi" }
