[package]
name = "user_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
apple-app-store-receipts = "0.3.1"
async-trait = "0.1.73"
reqwest = { version = "0.11.22", features = ["json"] }
sqlx = { version = "0.6.1", features = ["postgres", "macros", "chrono"] }
tracing = "0.1.40"
